intel/bench_214_new/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main/log.txt
bench_214_new/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main/extr_.linuxdriversmediadvb-frontendsdrxd_hard.c_CDRXD_with_main.c:157:25: error: use of undeclared identifier 'NULL'
                state->m_HiI2cPatch = NULL;
                                      ^
1 error generated.
HLS FPGA Parse FAILED.
